[package]
name = "levenshtein_grouper"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5.1"
ndarray = "0.15.4"
colored = "2.0.0"
walkdir = "2.3.2"
clap = "2.33.3"
indicatif = "0.16"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"